--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -52,6 +52,8 @@ spec:
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         imagePullPolicy: IfNotPresent
-      securityContext: {}
+      securityContext:
+        runAsUser: 1000860001
+        runAsGroup: 1000860001
   revisionHistoryLimit: 10
   progressDeadlineSeconds: 600
