--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       schedulerName: default-scheduler
       containers:
       - name: express-sample-app
-        image: quay.io/upslopeio/express-sample-app:d90c742ee626048c4d1e2032eb836255e4036561
+        image: express-sample-app
         ports:
         - name: http
           protocol: TCP
@@ -34,7 +34,7 @@ spec:
         livenessProbe:
           failureThreshold: 3
           httpGet:
-            port: 3000
+            port: http
             path: /
             scheme: HTTP
           periodSeconds: 10
@@ -52,8 +52,8 @@ spec:
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         imagePullPolicy: IfNotPresent
-      securityContext:
-        runAsUser: 1000860001
-        runAsGroup: 1000860001
+      imagePullSecrets:
+      - name: mnonaka-pull-secret
+      securityContext: {}
   revisionHistoryLimit: 10
   progressDeadlineSeconds: 600
